Zaktualizowano pliki dźwiękowe, web-klienta, zmieniono przestarzałą metodę URL na URI oraz naprawiono osiągnięcie "Smakosz"